# RenAmp

./: .gitignore  CMakeLists.txt  LICENSE  README-recruiters.md  README.md
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md  commenting-progress.md  commenting-style.md
include/: audio_engine.h
include/dsp/: cabinet_processor.h  dsp_chain.h  gate.h  limiter.h  nam_processor.h  nam_rtneural_converter.h  rtneural_wrapper.h  saturation.h
include/models/: nam_model.h
include/parameters/: param_smoother.h
resources/models/: IIC_pre.nam  JCM800_SM57.nam
scripts/: start_jack_with_usb.sh  start_nam_ir_gain.sh
src/: load_and_run.cpp  main.cpp
src/core/: audio_engine.cpp  audio_thread.cpp  control_thread.cpp  loader_thread.cpp  watchdog_thread.cpp
src/dsp/: cabinet_processor.cpp  dsp_chain.cpp  gate.cpp  limiter.cpp  nam_processor.cpp  nam_rtneural_converter.cpp  rtneural_wrapper.cpp  saturation.cpp
src/models/: ir_model.cpp  model_manager.cpp  nam_model.cpp
src/parameters/: param_manager.cpp  param_smoother.cpp
src/threading/: lock_free_queue.cpp  memory_pool.cpp
tests/: README.md
tests/fixtures/test_data/models/: simple_lstm.nam
tests/integration/: dsp_pipeline_tests.cpp
tests/unit/dsp/: cabinet_processor_tests.cpp  limiter_tests.cpp  nam_processor_tests.cpp  parameter_smoother_tests.cpp
tests/unit/models/: nam_model_tests.cpp
